Invoices/public/stylesheets/style.css
body {
  padding: 50px;
  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
}

a {
  color: #00B7FF;
}


.App {
}

.App-logo {
  animation: App-logo-spin infinite 20s linear;
  height: 60px;
  vertical-align: middle;
}

.App-header {
  background-color: #222;
  --height: 150px;
  padding: 20px;
  color: white;
  text-align: center;
}

.App-title {
  font-size: 1.5em;
}

.App-content {
  font-size: large;
    padding: 0 7%;
}

label {
    width: 5em;
    display: inline-block;
    text-align: right;
    padding: 0 0.5em;
}

nav a {
    padding: 0 1em;
}

@keyframes App-logo-spin {
  from { transform: rotate(0deg); }
  to { transform: rotate(360deg); }
}

table, tr, td, th {
  font-family: monospace, monospace;
}

th {
  text-align: left;
}

td {
  padding: 0.3em;
  padding-left: 0.5em;
  padding-right: 0.5em;
  white-space: pre;
  text-align: left;
}

/* For the last column (dollars) */
table td + td + td + td {
  text-align: right;
}

